--- a/components/PemesananHeader.html
+++ b/components/PemesananHeader.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <div class="card mx-2 shadow-sm" style="border-radius: 16px">
+  <div class="card shadow-sm" style="border-radius: 16px">
     <div class="card-body">
+      <!-- icons -->
       <div class="position-relative">
         <div class="position-absolute" style="top: 4px; right: 4px">
           <i class="bi bi-bookmark text-info"></i>
@@ -8,11 +9,15 @@
         </div>
       </div>
 
-      <h5 id="judulPemesanan" class="card-title">Penerbangan dari Jakarta ke Surabaya</h5>
+      <h5 id="headerJudulPemesanan" class="card-title">
+        <!-- booking -->
+      </h5>
       <h6 class="card-subtitle mt-3 text-muted">
         <div class="d-flex align-items-center mb-5">
           <span class="material-symbols-outlined text-info me-2" style="font-size: 18px">flight_takeoff</span>
-          <span id="infoPemesanan">Senin, 22 Juni 2022 | 1 dewasa | Ekonomi</span>
+          <span id="headerSubJudulPemesanan">
+            <!-- booking info -->
+          </span>
         </div>
       </h6>
     </div>
