--- a/components/PencarianItem.html
+++ b/components/PencarianItem.html
@@ -1,14 +1,16 @@
 <div class="container">
-  <div class="card mx-2 shadow-sm" style="border-radius: 16px">
+  <div class="card shadow-sm" style="border-radius: 16px">
     <div class="card-body p-0">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-10 p-0">
             <div class="card" style="border-radius: 16px">
               <div class="card-body text-center text-md-start">
-                <h5 id="judulPencarian" class="card-title">Jakarta (JKTA) -> Surabaya (SUB)</h5>
+                <h5 id="judulPencarian" class="card-title">
+                  <!-- search -->
+                </h5>
                 <h6 id="infoPencarian" class="card-subtitle mt-2 text-muted">
-                  Senin, 22 Juni 2022 | 1 dewasa | Ekonomi
+                  <!-- search info -->
                 </h6>
               </div>
             </div>
