basic search flow

--- a/components/NavBar.html
+++ b/components/NavBar.html
@@ -12,7 +12,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-      <a class="navbar-brand align-middle mx-2" href="#">
+      <a class="navbar-brand align-middle mx-2" href="../index.html">
         <img
           src="https://placebear.com/30/24"
           alt="brand-logo"
