--- a/components/pemesanan/PemesananHeader.html
+++ b/components/pemesanan/PemesananHeader.html
@@ -3,9 +3,9 @@
     <div class="card-body">
       <!-- icons -->
       <div class="position-relative">
-        <div class="position-absolute" style="top: 4px; right: 4px">
-          <i class="bi bi-bookmark text-info"></i>
-          <i class="bi bi-share text-info"></i>
+        <div class="position-absolute fs-4" style="top: 4px; right: 4px">
+          <a href="#" class="text-decoration-none"><i class="bi bi-bookmark text-info me-2"></i></a>
+          <a href="#" class="text-decoration-none"><i class="bi bi-share text-info"></i></a>
         </div>
       </div>
 
