--- a/components/pemesanan/PemesananInfo.html
+++ b/components/pemesanan/PemesananInfo.html
@@ -1,9 +1,9 @@
-<div id="itemListHasil" class="container">
+<div class="container">
   <div class="card" style="border-radius: 8px 8px 0px 0px">
     <div class="card-header">
       <div class="d-flex align-items-center">
         <span class="material-symbols-outlined text-info me-2" style="font-size: 18px">flight_takeoff</span>
-        <span id="infoJudulPemesanan" class="fs-5 fw-bold">
+        <span id="infoJudulPemesanan" class="fw-bold">
           <!-- from -> dest -->
         </span>
       </div>
