--- a/components/pemesanan/PemesananRincian.html
+++ b/components/pemesanan/PemesananRincian.html
@@ -1,5 +1,5 @@
 <div class="container my-3 my-xl-0">
-  <div class="card fs-5 shadow-sm" style="border-radius: 8px">
+  <div class="card shadow-sm" style="border-radius: 8px">
     <div class="card-header fw-bold">Rincian Harga</div>
     <div class="card-body">
       <div id="listRincian" class="container">
